--- a/Client code/MobileSocial/res/values/strings.xml
+++ b/Client code/MobileSocial/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">TestMobileDatabase</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_client_user_unit_test">ClientUserUnitTest</string>
 
 </resources>
