--- a/Client code/MobileSocial/res/values/strings.xml
+++ b/Client code/MobileSocial/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="title_activity_register">Register</string>
     <string name="title_activity_login">Login</string>
     <string name="title_activity_forget">Forget</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_friend_list">FriendListActivity</string>
+    <string name="title_activity_recent_dialog">RecentDialogActivity</string>
 
 </resources>
