Successfully merged register new user function from old UI to the new UI.

--- a/Client code/MobileSocial/res/values/strings.xml
+++ b/Client code/MobileSocial/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_friend_list">FriendListActivity</string>
     <string name="title_activity_recent_dialog">RecentDialogActivity</string>
     <string name="title_activity_activity_shake">ActivityShake</string>
+    <string name="title_activity_signup">SignupActivity</string>
 
 </resources>
