--- a/Client code/MobileSocial/res/values/strings.xml
+++ b/Client code/MobileSocial/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">TestMobileDatabase</string>
+    <string name="app_name">Mystery</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_client_user_unit_test">ClientUserUnitTest</string>
